fix: layout issues

--- a/components/product/ProductItem/ProductItem.module.scss
+++ b/components/product/ProductItem/ProductItem.module.scss
@@ -1,14 +1,22 @@
 @import '../../../assets/grid.scss';
 
 .productItemContainer {
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   margin-left: 5%;
   margin-right: 5%;
+
+  @include lg-width {
+    margin-bottom: 100px;
+  }
 
   .productContent {
     background-color: transparent;
     padding: 12px;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   
     .productTitle {
       font-family: NewYork;
@@ -17,10 +25,10 @@
       font-size: 36px;
       line-height: 44px;
       background-color: transparent;
-      text-align: left;
+      text-align: center;
       margin-bottom: 20px;
-      width: 200px;
-      height: 90px;
+      width: 280px;
+      // height: 90px;
       display: flex;
       align-items: flex-end;
       margin-bottom: 20px;
@@ -38,22 +46,30 @@
 
       @include sm-width {
         width: 400px;
+        text-align: center;
       }
     
       @include md-width {
         width: 500px;
+        text-align: center;
       }
     
       @include lg-width {
         width: 350px;
+        text-align: center;
+        height: 90px;
       }
     
       @include xl-width {
         width: 400px;
+        text-align: left;
+        height: 90px;
       }
     
       @include xxl-width {
         width: 500px;
+        text-align: left;
+        height: 90px;
       }
     }
 
